--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <title>leal.com</title>
 </head>
 <body>
-  <img src="leal.png" alt="Imagem Leal">
+  <img src="leal.png" alt="Inspecione">
+
+<!-- Você se provou um guerreiro feroz e capaz. No entanto, um guerreiro precisa se alimentar para ter forcas durante sua caminhada
+  A dica é: estrogonofe de frango
+  -->
 </body>
 </html>
