--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <title>leal.com</title>
 </head>
 <body>
-  <img src="leal.png" alt="Inspecione">
+  <img src="leal.png" alt="Você se provou um guerreiro feroz e capaz. No entanto, um guerreiro precisa se alimentar para ter forcas durante sua caminhada">
 
-<!-- Você se provou um guerreiro feroz e capaz. No entanto, um guerreiro precisa se alimentar para ter forcas durante sua caminhada
-  A dica é: estrogonofe de frango
+<!-- Pedaço da frase: Estrogonofe de frango
   -->
+
+<footer>Dica: inspect</footer>
 </body>
 </html>
